adds place corgi screen

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <ol>
     <li>Mi primer proyecto, <a href="#">link aqui</a></li>
     <li>Mi segundo proyecto, <a href="#">link aqui</a></li>
+    <li>Acá agregué otro poyecto, <a href="#">link aqui</a></li>
+    <p>También me gustan los perritos</p>
+    <img src="http://placecorgi.com/260/180" />
   </ol>
 
   <img src="./javascript.svg" alt="">
